unpackaged/main/default/objects/OrderApi__Item__c/OrderApi__Item__c.object-meta.xml
<CustomObject>
    <description>Items store all products, services and funds an organization uses to generate revenue.</description>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>