unpackaged/main/default/objects/OrderApi__Item__c/fields/Avalara_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Avalara_Tax_Code__c</fullName>
    <description>Avalara tax code for this product (e.g., P0000000 for tangible goods, SW054000 for SaaS, NT for non-taxable). Sent in the CreateTransaction API request.</description>
    <inlineHelpText>Avalara tax code classification. Examples: P0000000 (tangible goods), SW054000 (SaaS), NT (non-taxable).</inlineHelpText>
    <label>Avalara Tax Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>