unpackaged/main/default/objects/OrderApi__Item__c/fields/EventApi__Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the sponsor package that reflects the configurations of this Item.</description>
    <inlineHelpText>** System Calculated ** Link to the sponsor package that reflects the configurations of this Item.</inlineHelpText>
    <label>Sponsor Package</label>
    <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
    <relationshipLabel>DO NOT DISPLAY</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>