unpackaged/main/default/objects/OrderApi__Item__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to Ticket Type (Circular Reference) do not manually update.</description>
    <inlineHelpText>** System Calculated ** Link to Ticket Type (Circular Reference) do not manually update.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>DO NOT DISPLAY</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>