unpackaged/main/default/objects/OrderApi__Item__c/fields/Exam_Year__c.field-meta.xml
<CustomField>
    <fullName>Exam_Year__c</fullName>
    <label>Exam Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>