unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Auto_Generated_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>FON_Auto_Generated_Item_Number__c</fullName>
    <description>Any time a new item gets created, the system will autogenerate a number. This field is used specifically for NCP Session IDs</description>
    <displayFormat>{00000}</displayFormat>
    <inlineHelpText>Any time a new item gets created, the system will autogenerate a number. This field is used specifically for NCP Session IDs</inlineHelpText>
    <label>Auto Generated Item Number</label>
    <type>AutoNumber</type>
</CustomField>