unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Directory_Description__c.field-meta.xml
<CustomField>
    <fullName>FON_Directory_Description__c</fullName>
    <description>Description used for Directories. Can be the same description as what will be displayed on the Store.</description>
    <inlineHelpText>Description used for Directories. Can be the same description as what will be displayed on the Store.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>