unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Education_Session_Categories__c.field-meta.xml
<CustomField>
    <fullName>FON_Education_Session_Categories__c</fullName>
    <inlineHelpText>Categories for education sessions. Used to filter education sessions within a directory.</inlineHelpText>
    <label>Education Session Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All About Check</fullName>
            </value>
            <value>
                <fullName>What Do I Do When...</fullName>
            </value>
            <value>
                <fullName>Complimentary Webinars</fullName>
            </value>
            <value>
                <fullName>ECCHO OPS Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>