unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_External_File_URL__c.field-meta.xml
<CustomField>
    <fullName>FON_External_File_URL__c</fullName>
    <label>External File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>