unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Is_Digital_Material__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Digital_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Digital Material</label>
    <type>Checkbox</type>
</CustomField>