unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_NCP_CE_Value__c.field-meta.xml
<CustomField>
    <fullName>FON_NCP_CE_Value__c</fullName>
    <inlineHelpText>The number of credits an educational session item is worth. This will be displayed on a directory.</inlineHelpText>
    <label>NCP CE Value</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>