unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Partner_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>FON_Partner_Provider_ID__c</fullName>
    <inlineHelpText>The id belonging to a specific partner provider</inlineHelpText>
    <label>Partner Provider ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>