unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_PDF_Doc__c.field-meta.xml
<CustomField>
    <fullName>FON_PDF_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Looks to the PDF document housed in Media Assets</inlineHelpText>
    <label>PDF Doc</label>
    <referenceTo>PagesApi__Media_Asset__c</referenceTo>
    <relationshipLabel>Items (PDF Doc)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>