unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>FON_Session_ID__c</fullName>
    <formula>(FON_Partner_Provider_ID__c + &#39;.&#39; +  FON_Auto_Generated_Item_Number__c + &#39;.&#39;+  FON_Session_Code__c +&#39;-&#39;+ TEXT(FON_NCP_CE_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session ID #</label>
    <type>Text</type>
</CustomField>