unpackaged/main/default/objects/OrderApi__Item__c/fields/FON_Session_Length__c.field-meta.xml
<CustomField>
    <fullName>FON_Session_Length__c</fullName>
    <inlineHelpText>The number of minutes of an education session item</inlineHelpText>
    <label>Session Length</label>
    <length>80</length>
    <type>Text</type>
</CustomField>