unpackaged/main/default/objects/OrderApi__Item__c/fields/Is_Complimentary_Education__c.field-meta.xml
<CustomField>
    <fullName>Is_Complimentary_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complimentary Education</label>
    <type>Checkbox</type>
</CustomField>