unpackaged/main/default/objects/OrderApi__Item__c/fields/Is_Education_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Education_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Education -Member</label>
    <type>Checkbox</type>
</CustomField>