unpackaged/main/default/objects/OrderApi__Item__c/fields/Legacy_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Item ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>