unpackaged/main/default/objects/OrderApi__Item__c/fields/Media_Asset__c.field-meta.xml
<CustomField>
    <fullName>Media_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Asset</label>
    <referenceTo>PagesApi__Media_Asset__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>