unpackaged/main/default/objects/OrderApi__Item__c/fields/NCP_Exam_year__c.field-meta.xml
<CustomField>
    <fullName>NCP_Exam_year__c</fullName>
    <formula>EventApi__Event__r.Exam_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCP Exam year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>