unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Add_to_Cart_Button_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Add_to_Cart_Button_Label_Override__c</fullName>
    <description>The value defined in this field will override the &quot;Add to Cart&quot; button label for this item.</description>
    <inlineHelpText>The value defined in this field will override the &quot;Add to Cart&quot; button label for this item.</inlineHelpText>
    <label>Add to Cart Button Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>