unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Add_to_Cart_Button_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Add_to_Cart_Button_Override__c</fullName>
    <description>The value defined in this field will redirect the user to a custom flow. If null, the user will be taken through the Fonteva defined user flow for item purchase</description>
    <inlineHelpText>The value defined in this field will redirect the user to a custom flow. If null, the user will be taken through the Fonteva defined user flow for item purchase</inlineHelpText>
    <label>Add to Cart Button Override</label>
    <type>Url</type>
</CustomField>