unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Adjustment_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</description>
    <inlineHelpText>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</inlineHelpText>
    <label>Adjustment Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Sales Adjustment Accounts)</relationshipLabel>
    <relationshipName>Items2</relationshipName>
    <type>Lookup</type>
</CustomField>