unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__AR_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the GL Account used for A/R transactions.</description>
    <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
    <label>A/R Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (A/R Account)</relationshipLabel>
    <relationshipName>Items_AR_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>