unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Assign_to_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assign_to_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Derived from parent Item Class.</description>
    <inlineHelpText>** System Calculated Override ** Derived from parent Item Class.</inlineHelpText>
    <label>Assign to Item</label>
    <type>Checkbox</type>
</CustomField>