unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Assignment_Badge_Types_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_Badge_Types_CSV__c</fullName>
    <description>SYSTEM</description>
    <inlineHelpText>SYSTEM</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>