unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Assignment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_Instructions__c</fullName>
    <description>This field displays instructional text for managing assignments and purchasing and renewing subscriptions.</description>
    <inlineHelpText>This field displays instructional text for managing assignments and purchasing and renewing subscriptions.</inlineHelpText>
    <label>Assignment Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>