unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Assignment_SObject__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_SObject__c</fullName>
    <description>** System Calculated ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Automatically calculated from the &quot;Assignment SObject&quot; field on the parent Item Class.</description>
    <inlineHelpText>** System Calculated ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Automatically calculated from the &quot;Assignment SObject&quot; field on the parent Item Class.</inlineHelpText>
    <label>Assignment SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>