unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Items can be related to Business Groups to separate business lines and/or legal entities on transactional (sales) and financial reports.</description>
    <inlineHelpText>Items can be related to Business Groups to separate business lines and/or legal entities on transactional (sales) and financial reports.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>