unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Cost__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cost__c</fullName>
    <description>The cost per unit for the item.</description>
    <inlineHelpText>The cost per unit for the item.</inlineHelpText>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>