unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Defer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Defer_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
    <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
    <label>Defer Revenue</label>
    <type>Checkbox</type>
</CustomField>