unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deferred_Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deferred Revenue Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>