unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Deferred_Revenue_Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deferred_Revenue_Term__c</fullName>
    <label>Deferred Revenue Term (In Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>