unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Disable_Price_Rules__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Price_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the system will not create Price Rules for the Item and will not attempt to auto-calculate the price for the Item when it is added to a Sales Order, Invoice, or Receipt. Default unchecked.</description>
    <inlineHelpText>When checked the system will not create Price Rules for the Item and will not attempt to auto-calculate the price for the Item when it is added to a Sales Order, Invoice, or Receipt. Default unchecked.</inlineHelpText>
    <label>Disable Price Rules</label>
    <type>Checkbox</type>
</CustomField>