unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Disable_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables scheduling when you buy this item</description>
    <inlineHelpText>Disables scheduling when you buy this item</inlineHelpText>
    <label>Disable Scheduling</label>
    <type>Checkbox</type>
</CustomField>