unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Discount_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Discount_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to debit when discounting a sale related to the Item.</description>
    <inlineHelpText>The account to debit when discounting a sale related to the Item.</inlineHelpText>
    <label>Discount Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Discount Account)</relationshipLabel>
    <relationshipName>Discount_Account_Items</relationshipName>
    <type>Lookup</type>
</CustomField>