unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Name__c</fullName>
    <description>** System Calculated Override ** The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Name&quot; field.</description>
    <inlineHelpText>** System Calculated Override ** The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Name&quot; field.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>