unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Download_File_Location__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Download_File_Location__c</fullName>
    <description>** Conditionally Required ** Reference to the file location related to this downloadable item</description>
    <inlineHelpText>** Conditionally Required ** Reference to the file location related to this downloadable item</inlineHelpText>
    <label>Download File Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>