unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Download_File_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Download_File_Name__c</fullName>
    <description>** Conditionally Required ** Defines to the file name of related to this downloadable item</description>
    <inlineHelpText>** Conditionally Required ** Defines to the file name of related to this downloadable item</inlineHelpText>
    <label>Download File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>