unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Download_File_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Download_File_Type__c</fullName>
    <description>** Conditionally Required ** Reference to the file type, related to this downloadable item.</description>
    <inlineHelpText>** Conditionally Required ** Reference to the file type, related to this downloadable item.</inlineHelpText>
    <label>Download File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>avi</fullName>
            </value>
            <value>
                <fullName>bmp</fullName>
            </value>
            <value>
                <fullName>csv</fullName>
            </value>
            <value>
                <fullName>doc</fullName>
            </value>
            <value>
                <fullName>docx</fullName>
            </value>
            <value>
                <fullName>flv</fullName>
            </value>
            <value>
                <fullName>gif</fullName>
            </value>
            <value>
                <fullName>jpg</fullName>
            </value>
            <value>
                <fullName>log</fullName>
            </value>
            <value>
                <fullName>mp4</fullName>
            </value>
            <value>
                <fullName>mpg</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>png</fullName>
            </value>
            <value>
                <fullName>psd</fullName>
            </value>
            <value>
                <fullName>swf</fullName>
            </value>
            <value>
                <fullName>tar</fullName>
            </value>
            <value>
                <fullName>thm</fullName>
            </value>
            <value>
                <fullName>tif</fullName>
            </value>
            <value>
                <fullName>txt</fullName>
            </value>
            <value>
                <fullName>wmv</fullName>
            </value>
            <value>
                <fullName>xl</fullName>
            </value>
            <value>
                <fullName>xls</fullName>
            </value>
            <value>
                <fullName>xlsx</fullName>
            </value>
            <value>
                <fullName>xml</fullName>
            </value>
            <value>
                <fullName>zip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>