unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__EAN__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EAN__c</fullName>
    <description>An EAN (European Article Number) is a unique 13-digit Global Trade Item Number for identifying non-book products in Europe.</description>
    <inlineHelpText>An EAN (European Article Number) is a bar code symbology consisting of a unique 13-digit Global Trade Item Number for identifying non-book products in Europe.</inlineHelpText>
    <label>EAN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>