unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Item will only be made available to purchase when the purchasing Contact or Account meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</description>
    <inlineHelpText>When checked, the Item will only be made available to purchase when the purchasing Contact or Account meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>