unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Enable_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</description>
    <inlineHelpText>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</inlineHelpText>
    <label>Enable Assignments</label>
    <type>Checkbox</type>
</CustomField>