unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Enable_Cancellation_Request__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Cancellation_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this field will allow members to request to cancel their membership.</description>
    <inlineHelpText>When checked this field will allow members to request to cancel their membership.</inlineHelpText>
    <label>Enable Cancellation Request</label>
    <type>Checkbox</type>
</CustomField>