unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Enable_MidTerm_Changes__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_MidTerm_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the member will have the ability to change their membership to one of the items defined on this record.</description>
    <inlineHelpText>When checked the member will have the ability to change their membership to one of the items defined on this record.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>