unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Enable_Shipping__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the shipping for related item</description>
    <inlineHelpText>Once this checkbox is checked, system will look for the apporiate shipping rate to apply.</inlineHelpText>
    <label>Enable Shipping</label>
    <type>Checkbox</type>
</CustomField>