unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__eStore_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__eStore_Description__c</fullName>
    <description>The value in this field is presented on the item detail page in the estore.</description>
    <inlineHelpText>The value in this field is presented on the item detail page in the estore.</inlineHelpText>
    <label>eStore Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>