unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__eStore_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__eStore_Short_Description__c</fullName>
    <description>The value in this field will display in the eStore&#39;s item detail page summary section.</description>
    <inlineHelpText>The value in this field will display in the eStore&#39;s item detail page summary section.</inlineHelpText>
    <label>eStore Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>