unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Features_List__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Features_List__c</fullName>
    <description>Enter a list of features for display. Each feature should be separated by a line break</description>
    <inlineHelpText>Enter a list of features for display. Each feature should be separated by a line break</inlineHelpText>
    <label>Features List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>