unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Form__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related item interview form.</description>
    <inlineHelpText>Link to related item interview form.</inlineHelpText>
    <label>Interview Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>